# HireLens

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.fr.md  README.md  deny.toml  hirelens.example.toml
.claude/: settings.json
.claude/agents/: build-resolver.md  rust-reviewer.md
.github/workflows/: ci.yml
assets/: skills_aliases.toml
docs/: GOOGLE_OAUTH_SETUP.md  KNOWN_FAILURE_PATTERNS.md  METRICS.md  ROADMAP.md
docs/adr/: 0001-anti-hallucination-validation.md  0002-llm-provider-trait.md  0003-egui-eframe.md  0004-gemini-oauth2-gui-only.md  0005-pdf-renderer-trait.md  0006-word-boundary-and-provider-cache-key.md  0007-gemini-embedded-oauth-and-api-key.md  0008-offline-matching-engine.md
examples/: cv.md  job.txt
src/: main.rs
src/auth/: AI_CONTEXT.md  AI_SUMMARY.md  google.rs  mod.rs  oauth_server.rs  pkce.rs  token_store.rs
src/cli/: mod.rs
src/core/: AI_CONTEXT.md  AI_SUMMARY.md  ats.rs  diff.rs  matching.rs  mod.rs  offline_match.rs  pipeline.rs  similarity.rs  skills.rs  text.rs  validation.rs
src/export/: AI_CONTEXT.md  AI_SUMMARY.md  mod.rs  typst_render.rs
src/gui/: AI_CONTEXT.md  AI_SUMMARY.md  app.rs  controller.rs  html_export.rs  mod.rs  settings.rs  state.rs  theme.rs
src/llm/: AI_CONTEXT.md  AI_SUMMARY.md  gemini.rs  http_json.rs  lmstudio.rs  mod.rs  ollama.rs  openai.rs  provider.rs  router.rs
src/parser/: AI_CONTEXT.md  AI_SUMMARY.md  mod.rs
src/utils/: AI_CONTEXT.md  AI_SUMMARY.md  cache.rs  config.rs
src/web/: mod.rs  ui.html
(+13 files in other folders)
