[package]
name = "hirelens"
version = "0.1.0"
edition = "2021"
description = "Hybrid AI-powered CV optimization engine with strict anti-hallucination validation."
license = "MIT"

[[bin]]
name = "hirelens"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "persistence", "wgpu"] }
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive", "env"] }
dirs = "5.0"
gray_matter = "0.2"
hashbrown = { version = "0.14", features = ["serde"] }
pulldown-cmark = "0.10"
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
similar = "2.5"
thiserror = "1.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "process"] }
toml = "0.8"
rfd = "0.15"
open = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

